fix - Navbar overflow bug fix

--- a/codement/codem/static/css/codement_20.css
+++ b/codement/codem/static/css/codement_20.css
@@ -1,13 +1,17 @@
 * {
   margin: 0;
   padding: 0;
+  overflow-x: clip;
 }
 
 body {
   font-family: "ROBOTO", sans-serif;
+  
 }
 
+
 .nav{
+  
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -105,6 +109,14 @@ a {
   letter-spacing: 0.1rem;
   transition: all 0.5s ease;
   font-size: 1vw;
+}
+
+@media screen and (max-width: 480px) {
+
+  .nav-tab, .nav-tab-home {
+    font-size: 12px !important;
+    letter-spacing: 0px !important;
+  }
 }
 
 .nav-tab:hover {
